##Text encoding: utf-8

2007-12-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* all files: fix various compilation issues, fixes build with
	gcc snapshot. [#21764]

2007-12-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/chem3ddoc.cc: fix atoms position.
	* libs/gcu/glview.cc: fix print and image export when off-screen
	rendering does not work. [#21946]
	* libs/gcu/glview.h: ditto.
	* programs/3d/main.cc: don't crash if no display type is given.

2007-12-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/canvas/gcp-canvas-shape.c:
	(gnome_canvas_shape_ext_export_svg),
	(gnome_canvas_shape_ext_draw_cairo): implement the curveto case. [#21715]
	* libs/canvas/pango-layout-to-svg.c: (pango_layout_to_svg): fix
	vertical text alignment after subscript/superscript. [#21715]

2007-11-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: requests goffice-0.5.4.
	* goffice/gchemutils.cc: updated after recent changes in goffice api.
	* programs/table/gchemtable-curve.cc: ditto.

2007-11-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: ensure goffice has gnome support.

2007-11-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* */*/*.cc: better use of namespaces.
	* */*/*.h:ditto.
	* libs/gcp/theme.cc: fixed a crash when adding a file theme for a file
	without title. 
	* mozilla-plugin/Makefile.am: initial support of gchempaint files.
	* mozilla-plugin/chem-viewer.cc: ditto.
	* mozilla-plugin/moz-plugin.c: (NP_GetMIMEDescription): ditto.

2007-11-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/atomsdlg.cc: inactivate the change signal in
	the radii menu when populating the menu. [#21576]
	* programs/crystal/atomsdlg.h: ditto.

2007-11-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/crystaldoc.cc: add a namespace to files so that they are
	correctly identified as gcrystal files.
	* samples/*.gcrystal: ditto.

2007-11-01  Jean Bréfort  <jean.brefort@normalesup.org>